--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -110,8 +110,7 @@
             </tr>
         </thead>
         <tbody>
-            <% @audit_logs.each do |a| %>
-            <%# @audit_logs[0..49].each do |a| %>
+            <% @all_audit_logs.each do |a| %>
             <tr>
                 <td>
                     <%= a.event %>
