--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
                 <li class="nav-item">
                     <%= link_to "Home", root_path, class:"nav-link" %>
                 </li>
-                <% if current_user && current_user.admin %>
+                <% if current_user && current_user.role == "admin" || current_user.role == "super admin" %>
                 <li class="nav-item">
                     <%= link_to "System Audit Logs", audit_logs_path, class:"nav-link" %>
                 </li>
