--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,11 +5,15 @@
         <%= search_form_for @q do |f|%>
         <div class="row">
             <div class="col">
-                <%= f.label :first_name_or_last_name_cont %>:
-                <%= f.search_field :first_name_or_last_name_cont , placeholder: "Search First Name", class:'form-control' %>
+                <%= f.label "First Name" %>:
+                <%= f.search_field :first_name_cont , placeholder: "Search First Name", class:'form-control' %>
                 <div style="float: left ; margin-top: 10px; margin-bottom: 20px ;">
                     <%= link_to "User Invite", new_user_invitation_path, class:" btn btn-outline-primary float-end" %>
                 </div>
+            </div>
+            <div class="col">
+                <%= f.label "Last Name" %>:
+                <%= f.search_field :last_name_cont , placeholder: "Search First Name", class:'form-control' %>
             </div>
             <div class="col">
                 <%= f.label :email_cont %>:
@@ -28,16 +32,20 @@
     <table class="table table-hover table-bordered">
         <thead>
             <tr>
-                <th width="20%">
+                <th>
                     <%= sort_link(@q, :first_name, "Name", default_order: :asc)%>
                 </th> <!-- Sorts through the names in alphabetical order-->
-                <th width="30%">
+                <th>
                     <%= sort_link(@q, :email, "Email", default_order: :asc)%>
                 </th>
-                <th width="10%">Role</th>
-                <th width="20%">Delete</th>
-                <th width="20%">Account Status</th>
-                <!--  <th scope="col" class="fa-solid fa-trash"></th> -->
+                <th>
+                    <%= sort_link(@q, :role, "Role", default_order: :asc)%>
+                </th>
+                <th>Account Status</th>
+                <th>Delete</th>
+                <% if current_user.role == "super admin" %>
+                <th>Change Role</th>
+                <% end %>
             </tr>
         </thead>
         <tbody>
@@ -60,22 +68,14 @@
                 </td>
                 <td>
                     <p class="text-break">
-                        <% if user.admin? %>
+                        <% if user.role == "admin" %>
                         Admin
+                        <% elsif user.role == "super admin" %>
+                        Super Admin
                         <% else %>
                         User
                         <% end %>
                     </p>
-                <td>
-                    <div class="position-relative">
-                        <% if current_user.email != user.email %>
-                        <%= button_to 'delete user', user, class:"btn btn-outline-danger", style:"width: 100%", method: :delete, data: { confirm: 'Are you sure?' }  %>
-                        <% else %>
-                        <div class="text-center">
-                            <p style="color:green">Current Account</p>
-                        </div>
-                        <% end %>
-                    </div>
                 </td>
                 <td>
                     <% if user.created_by_invite? && user.invitation_accepted? == false %>
@@ -84,6 +84,36 @@
                     <p style="color:green">Account is active</p>
                     <% end %>
                 </td>
+                <td>
+                    <div class="position-relative">
+                        <% if current_user.role == "super admin" && current_user.email != user.email %>
+                        <%= button_to 'delete user', user, class:"btn btn-outline-danger", style:"width: 100%", method: :delete, data: { confirm: 'Are you sure?' } %>
+                        <% elsif current_user.email != user.email && user.role != "admin"%>
+                        <%= button_to 'delete user', user, class:"btn btn-outline-danger", style:"width: 100%", method: :delete, data: { confirm: 'Are you sure?' } %>
+                        <% elsif current_user.email == user.email %>
+                        <div class="text-center">
+                            <p style="color:green">Current Account</p>
+                        </div>
+                        <% else %>
+                        <div class="text-center">
+                            <p style="color:orange">Cannot be Deleted</p>
+                        </div>
+                        <% end %>
+                    </div>
+                </td>
+                <% if current_user.role == "super admin" %>
+                <td>
+                    <% if user.role == "user" %>
+                    <%= button_to "Promote to admin", promote_user_path(user), class:"btn btn-outline-primary", style:"width: 100%", method: :patch %>
+                    <% elsif user.role == "admin" %>
+                    <%= button_to "Demote to user", demote_user_path(user), class:"btn btn-outline-secondary", style:"width: 100%", method: :patch %>
+                    <% elsif current_user.email == user.email %>
+                    <div class="text-center">
+                        <p style="color:green">Current Account</p>
+                    </div>
+                    <% end %>
+                </td>
+                <% end %>
             </tr>
             <% end %>
         </tbody>
